# training-openai

./: main.ipynb  pyproject.toml
