[tool.poetry]
name = "training-openai"
version = "0.1.0"
description = ""
authors = ["karellen.kim <karellen.kim@gmail.com>"]
readme = "README.md"
packages = [{include = "training_openai"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.6"
python-dotenv = "^1.0.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

